Added css styling.

--- a/clientadd.htm
+++ b/clientadd.htm
@@ -1,3 +1,6 @@
+<head>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 <form action="clientadd.php">
   First name:
   <input type="text" name="first_name" required="required" >
